# crossPlatformMemoryTest

./: CMakeLists.txt  main.cpp  memoryinfo.hpp  memoryinfo_lin.cpp  memoryinfo_mac.cpp  memoryinfo_win.cpp
.github/workflows/: build_and_test.yml
